# niftyone

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml  other.yaml  support_request.yaml
.github/workflows/: deploy_container.yaml  docs.yaml  draft_pdf.yaml  test.yaml
doc/: book.toml  make.py
docs/: SUMMARY.tpl  book.toml  cli.md  contributing.md  faq.md  make.py  usage.md
docs/contributing/: setup.md
docs/pdoc-theme/: custom.css
docs/src/: 404.md
docs/src/guide/contributing/: README.md
docs/src/guide/examples/: README.md
docs/src/guide/faq/: README.md
docs/src/guide/features/: README.md  figure_generation.md  metrics.md
docs/src/guide/installation/: README.md
docs/src/guide/usage/: README.md  container.md  local.md  workflows.md
docs/src/guide/usage/advanced/: README.md  qc.md  remote.md
docs/src/guide/version/: README.md
notebooks/: dwi_figure_sandbox.ipynb  overlays.ipynb
paper/: paper.bib  paper.md
src/niclips/: __init__.py  checks.py  defaults.py  io.py  typing.py
src/niclips/figures/: __init__.py  bold.py  dwi.py  multi_view.py
src/niclips/image/: __init__.py  _annotate.py  _centroid.py  _convert.py  _coord.py  _pad.py  _render.py  _slice.py  _stack.py  _window.py
src/niftyone/: __init__.py  __main__.py  bold.py  checks.py  cli.py  defaults.py  exceptions.py  io.py  labels.py  launch.py  metrics.py  multi_view.py  plugins.py  runner.py  tags.py  typing.py
src/niftyone/analysis_levels/: __init__.py  group.py  launch.py  participant.py
src/niftyone/figures/: __init__.py  anat.py  bold.py  dwi.py  factory.py  func.py  generator.py  multi_view.py  registry.py  runner.py
src/niftyone/image/: __init__.py  _annotate.py  _centroid.py  _convert.py  _coord.py  _pad.py  _render.py  _slice.py  _stack.py  _window.py
src/niftyone/metadata/: __init__.py  bids.py  tags.py
src/niftyone/pipelines/: __init__.py  group.py  participant.py  participant_raw.py
src/niftyone/resources/: config.yaml
src/niftyone/sandbox/: multi_view_sandbox.py  participant_brainmask.py
tests/: test_tags.py
tests/notebooks/: bold.ipynb  carpet.ipynb  multi_view.ipynb
tests/unit/: conftest.py
tests/unit/niclips/: test_checks.py  test_defaults.py  test_io.py
tests/unit/niclips/figures/: test_bold.py  test_dwi.py  test_multi_view.py
tests/unit/niclips/image/: test_annotate.py  test_centroid.py  test_convert.py  test_coord.py  test_pad.py  test_render.py  test_slice.py  test_stack.py  test_window.py
tests/unit/niftyone/: test_cli.py  test_launch.py  test_metrics.py  test_runner.py  test_tags.py
tests/unit/niftyone/analysis_levels/: test_launch.py
tests/unit/niftyone/figures/: test_anat.py  test_factory.py  test_func.py  test_generator.py  test_registry.py
tests/unit/niftyone/metadata/: test_bids.py  test_tags.py
